project page title alignment fix

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -175,6 +175,7 @@ p {
 		margin-bottom: 16px;
 		h1 {
 			text-align: left;
+			font-size: 18pt;
 		}
 	}
 	img {
